Added admin seed script, login and logout routes
